fix resizing icons on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h2 {
     display: none;
 }
 
+
 .h2style {
     display: flex;
     justify-content: space-between;
@@ -79,6 +80,8 @@ h2 {
 .h2style svg {
     position: relative;
     top: 0.6rem;
+    min-height: 30px;
+    min-width: 30px;
 }
 
 h1 svg {
